FIX: dark mode border

--- a/components/card/src/base.scss
+++ b/components/card/src/base.scss
@@ -5,7 +5,7 @@ $radius: 1rem !default;
 $padding-block: 1.25rem !default;
 $padding-inline: 1.25rem !default;
 $bg: color-mix(in oklab, var(--root-bg) 88%, white) !default;
-$stroke: color-mix(in oklab, var(--root-bg) 88%, black) !default;
+$stroke: color-mix(in oklab, var(--root-bg) 88%, var(--root-fg)) !default;
 $shadow: none !default;
 
 .card {
